# arco-pltfrm

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  Makefile  README.md  pyproject.toml
.agents/skills/data-platform-architecture/: SKILL.md
.agents/skills/data-platform-architecture/agents/: openai.yaml
.agents/skills/data-platform-architecture/references/: architecture-checklist.md
.agents/skills/document-project-structure/: SKILL.md
.agents/skills/document-project-structure/agents/: openai.yaml
.codex/: config.toml
.codex/agents/: architect.toml  reviewer.toml  tester.toml
.github/codex/prompts/: architecture-adr.md  implement-change.md  review.md  skill-retrospective.md
.github/codex/workflows/: pr-review.example.yml
src/config/: config.ini
src/core/ingestao/contexto/: context.py
src/core/ingestao/decorator/: metricas.py
src/core/ml/: workflow_entrypoint.py
src/core/transformacao/decorator/: main.py
src/utils/common/: enums.py  exceptions.py  feature_flags.py  loggers.py
src/utils/integracoes/airflow/: operadores.py  sensores.py
src/utils/integracoes/datadog/: datadog.py
src/utils/integracoes/dbt/: contratos.py
src/utils/integracoes/e-mail/: send.py
src/utils/integracoes/google/: billing_api.py
src/utils/servicos/acl/: acl.py  grupos_permissoes.py
src/utils/servicos/fabrica/: fabrica.py  gerador.py
src/utils/servicos/finops/: finops.py
src/utils/servicos/metadata/: entidade.py  estrutura.py  mapeador.py
src/utils/servicos/quality/: estrategia.py  quality.py  validacoes.py
(+19 files in other folders)
