[project]
name = "arco-pltfrm-engineering"
version = "0.1.0"
description = "Projeto base Python para o case de Data Platform Engineering."
readme = "README.md"
requires-python = ">=3.12"
authors = [
    { name = "Arco Educacao" },
]
dependencies = []

[dependency-groups]
dev = [
    "mypy>=1.13.0",
    "pre-commit>=4.0.1",
    "pytest>=8.3.4",
    "pytest-cov>=6.0.0",
    "ruff>=0.8.4",
]

[tool.uv]
package = false

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "test"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM", "C4"]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra --strict-markers --strict-config"
testpaths = ["test"]
pythonpath = ["src"]

[tool.coverage.run]
branch = true
source = ["src"]

[tool.coverage.report]
show_missing = true
skip_covered = true
fail_under = 80

[tool.mypy]
python_version = "3.12"
strict = true
warn_unused_configs = true
exclude = [
    "^\\.venv/",
    "^build/",
    "^dist/",
]
